# SmileX-AI-Stock

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  main.py  pyproject.toml  skills-lock.json
backend/: .env.example  backfill_ai_report.py  backfill_sector.py  backfill_sector_capital_flow.py  main.py  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/api/: ai_config.py  ai_daily_report.py  backtest.py  chat.py  limit_up_analysis.py  market.py  market_analysis.py  model_config.py  news.py  proxy.py  research.py  sector_analysis.py  stock.py  stock_analysis.py  stock_daily.py  strategy.py  tomorrow_strategy.py  watchlist.py
backend/app/models/: ai_config.py  market.py  news.py  strategy.py
backend/app/services/: ai_config.py  ai_daily_report.py  backfill_daily.py  capital_detail.py  constants.py  fundamental.py  limit_up_analysis.py  llm.py  market.py  market_analysis.py  news_fetcher.py  news_sector_assoc.py  news_sync.py  research_pick.py  research_sync.py  scheduler.py  sector.py  sector_analysis.py  sector_strength.py  stock.py  stock_analysis.py  stock_daily.py  strategy.py  technical_indicators.py  tomorrow_strategy.py  watchlist.py  watchlist_analysis.py  watchlist_snapshot.py
backend/app/services/backtest/: __init__.py  data_loader.py  engine.py  metrics.py  strategies.py
backend/sources/: base.py  cls.py  eastmoney.py  eastmoney_global.py  futu.py  jrj.py  research_eastmoney.py  sina.py  tonghuashun.py  wallstreetcn.py  xueqiu.py  yicai.py
backend/tests/: test_llm_concurrency.py  verify_concurrency.py
(+156 files in other folders)
