[project]
name = "smilex-ai-stock"
version = "0.1.0"
description = "A股量化选股系统"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "akshare>=1.14.0",
    "baostock>=0.8.9",
    "backtrader>=1.9.78",
    "streamlit>=1.30.0",
    "pandas-ta>=0.3.14b",
    "plotly>=5.18.0",
    "apscheduler>=3.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["smilex"]
