[project]
name = "smilex-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "akshare>=1.18.64",
    "apscheduler>=3.11.2",
    "fastapi>=0.136.3",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "uvicorn>=0.48.0",
    "openai>=1.82.0",
]
